# snowforge-py

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/examples/: 00_quickstart.py  01_file_format.py  05_copy_into.py
docs/examples/01_basic_setup/: 01_basic_setup.py
docs/examples/02_table_operations/: 01_create_tables.py  02_table_operations.py
docs/examples/03_stage_operations/: 03_stage_operations.py
docs/examples/04_data_loading/: 01_put_operations.py  02_copy_operations.py
docs/examples/05_task_management/: 01_simple_tasks.py
docs/examples/06_complex_workflows/: 01_etl_pipeline.py  02_data_migration.py
src/: file_format.py  forge.py  put.py  stage.py  table.py
src/snowforge/: __init__.py  copy_into.py  file_format.py  forge.py  put.py  stage.py  stream.py  table.py  task.py  utilities.py
tests/: test_stage.py  test_stream.py  test_table.py
