[tool.poetry]
name = "snowforge-py"
version = "0.1.0"
description = "simplify the creation and management of Snowflake objects and data pipeline processes"
authors = [
    "Francisco Montanez <32565971+Francisco-Montanez@users.noreply.github.com>",
]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
snowflake-snowpark-python = "^1.24.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
