[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowforge"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "A Python library for managing Snowflake workflows"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["snowflake-connector-python", "python-dotenv"]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/snowforge"]

[tool.hatch.build.targets.sdist]
packages = ["src/snowforge"]
